--- a/css/default.css
+++ b/css/default.css
@@ -1,11 +1,14 @@
 body {
     margin: 0px;
+    background-color: #cfe0e8;
 }
 h1 {
     font-size: 20px;
+    color: #b7d7e8;
 }
 p {
     font-size: 10px;
+    color: #87bdd8;
 }
 meta {
 
