--- a/css/default.css
+++ b/css/default.css
@@ -14,22 +14,16 @@ p {
 #P {
 
 }
-/* colors 
- The following 2 colors should be used as text */
+/* colors */
 .dark-sky {
     color: #001d2d;
+    background-color: #cfe0e8;
 }
 .darkish-sky {
     color: #00517a;
+    background-color: #b7d7e8;
 }
-/* The following 3 colors should be used as backgrounds */
 .light-sky {
-    color: #cfe0e8;
-}
-.sky {
-    color: #b7d7e8;
-}
-.med-sky {
     color: #87bdd8;
 }
 
